both endpoints implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.profiles.active=${ACTIVE_PROFILE:dev}
 server.port=${PORT:8093}
+
+secrets.sd_login=${SD_LOGIN}
+secrets.sd_password=${SD_PASSWORD}
+
+rest.client.sd.create.draft.form.url=${SD_CREATE_DRAFT_URL}
+rest.client.sd.patch.form.url=${SD_PATCH_DRAFT_URL}
