--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 </parent>
 <groupId>com.thomaz</groupId>
 <artifactId>proxy</artifactId>
-<version>0.0.1-SNAPSHOT</version>
+<version>1.0.0</version>
 <name>proxy</name>
 <description>Connection proxy</description>
 <url/>
