--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ secrets.sd_password=${SD_PASSWORD}
 
 rest.client.sd.create.draft.form.url=${SD_CREATE_DRAFT_URL}
 rest.client.sd.patch.form.url=${SD_PATCH_DRAFT_URL}
+
+pdf.gs.path=${GS_PATH:gs}
+pdf.gs.profile=${GS_PROFILE:ebook}
+pdf.gs.timeout-seconds=${GS_TIMEOUT_SECONDS:30}
+pdf.gs.max-concurrent=${GS_MAX_CONCURRENT:1}
+pdf.max-input-bytes=${GS_MAX_INPUT_BYTES:26214400}
