test pdf compression on cloud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ secrets.sd_password=${SD_PASSWORD}
 rest.client.sd.create.draft.form.url=${SD_CREATE_DRAFT_URL}
 rest.client.sd.patch.form.url=${SD_PATCH_DRAFT_URL}
 
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:100MB}
+spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:100MB}
+spring.servlet.multipart.enabled=true
+
 pdf.gs.path=${GS_PATH:gs}
 pdf.gs.profile=${GS_PROFILE:ebook}
 pdf.gs.timeout-seconds=${GS_TIMEOUT_SECONDS:30}
