add pdf callback

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,11 @@ pdf.gs.profile=${GS_PROFILE:ebook}
 pdf.gs.timeout-seconds=${GS_TIMEOUT_SECONDS:30}
 pdf.gs.max-concurrent=${GS_MAX_CONCURRENT:1}
 pdf.max-input-bytes=${GS_MAX_INPUT_BYTES:58428800}
+
+callback.file-class-id=${FILE_CLASS_ID:694416f0f3885e4c4df1c21d}
+callback.dev.organization-id=${DEV_ORGANIZATION:clam-dev}
+callback.dev.token=${DEV_TOKEN:placeholder-token}
+callback.hom.organization-id=${HOM_ORGANIZATION:clam-hom}
+callback.hom.token=${HOM_TOKEN:placeholder-token}
+callback.prd.organization-id=${PRD_ORGANIZATION:clam}
+callback.prd.token=${PRD_TOKEN:placeholder-token}
