enforce utf-8 charset

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 spring.profiles.active=${ACTIVE_PROFILE:dev}
 server.port=${PORT:8093}
 
@@ -10,6 +11,9 @@ rest.client.sd.patch.form.url=${SD_PATCH_DRAFT_URL}
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:100MB}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:100MB}
 spring.servlet.multipart.enabled=true
+spring.servlet.encoding.charset=UTF-8
+spring.servlet.encoding.force=true
+spring.servlet.encoding.force-response=true
 
 pdf.gs.path=${GS_PATH:gs}
 pdf.gs.profile=${GS_PROFILE:ebook}
