--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.profiles.active=${ACTIVE_PROFILE:dev}
 server.port=${PORT:8093}
 
+secrets.api-token=${API_TOKEN}
 secrets.sd_login=${SD_LOGIN}
 secrets.sd_password=${SD_PASSWORD}
 
